--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9"
+matplotlib = ">=3.8.4"
+numpy = {version = "1.21.5", python = ">=3.7, <3.11"}
 
 [tool.poetry.dev-dependencies]
 
