--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,10 @@ numpy = {version = "1.21.5", python = ">=3.7, <3.11"}
 
 [tool.poetry.dev-dependencies]
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.1.1"
+pytest-cov = "^5.0.0"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
