--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,10 @@ numpy = {version = "1.21.5", python = ">=3.7, <3.11"}
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.1.1"
 pytest-cov = "^5.0.0"
+jupyter = "^1.0.0"
+myst-nb = {version = "^1.0.0", python = "^3.9"}
+sphinx-autoapi = "^3.0.0"
+sphinx-rtd-theme = "^2.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
