--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -23,7 +23,7 @@ build:
       - poetry install
       - pip install myst-nb
       - pip install sphinx-autoapi
-      - pip intall sphinx-rtd-theme
+      - pip install sphinx-rtd-theme
       
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
